# gophsters

./: Cargo.toml
src/: data.rs  fetch.rs  main.rs  templates.rs
