[package]
name = "gophsters"
version = "0.1.0"
authors = ["Julien Blanchard <julien@sideburns.eu>"]
edition = "2018"

[dependencies]
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
chrono = { version = "0.4", features = ["serde"] }
regex ="*"
textwrap ="*"
deunicode = "0.4.0"
structopt = "0.2"
url = "2.1"
#tera = "1.0.0-beta"
tera = { path = "../teraerror" }
rayon = "1.1"
error-chain = "0.12"
